# gng

./: README  gng.cabal
Data/: GNG.hs
Data/GNG/: Data.hs  Input.hs
