name:                gng
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yusuke Nomura
maintainer:          yunomu@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  extensions:        OverloadedStrings
  ghc-options:       -Wall -fno-warn-unused-do-bind
  exposed-modules:     Data.GNG
  other-modules:       Data.GNG.Input
                     , Data.GNG.Data
  build-depends:       base ==4.*
                     , lens
                     , containers
                     , mtl
                     , safe
                     , data-default
